QtQml: Always throw when requesting an enum from an invalid singleton

The interpreter does this and so should the enum lookup adapter for
generated C++ code.

Fixes: QTBUG-109816
Change-Id: I576480c3ca808743ddc0ceaf2f0bd8a1de776a41
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 8cbb30a650c2a2c8fb4b8cc39f347ff370850e74)